[package]
name = "archive"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
sevenz-rust2 = { version = "0.13", features = ["compress", "util"] }
unrar = "0.5"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
